[package]
name = "explorer"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]

[dependencies]
glium = "*"
rctree = { git = "https://github.com/SimonSapin/rust-forest" }
simd = "0.2.0"
rusttype = "0.2.1"
rand = "0.3.15"
image = "0.14.0"

[profile.release]
lto = true
panic = 'abort'