[package]
name = "layout2d"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
repository = "https://github.com/sharazam/layout2d"
homepage = "https://github.com/sharazam/layout2d"
license = "MIT"
description = "2D layout library for UI development"

[dependencies]
simd = "0.2.0"

[dev-dependencies]
rand = "0.3.15"