[package]
name = "layout2d"
version = "0.1.2"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
repository = "https://github.com/sharazam/layout2d"
homepage = "https://github.com/sharazam/layout2d"
license = "MIT"
description = "2D layout library for UI development"

[features]
use_simd = []

[dependencies]
simd = { version = "0.2.0", optional = true }

[dev-dependencies]
rand = "0.3.*"
